# zTank

./: .gitignore  CMakeLists.txt  README.md  README.sync-conflict-20250911-212225-24NPEXD.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
3Dprint/: Inserts.ods  README.md  zTank_enclosure.FCStd
3Dprint/STL/: zTank_enclosure-Button.stl  zTank_enclosure-Enclosure_Top.3mf  zTank_enclosure-Enclosure_Top.stl  zTank_enclosure-Enclosure_bottom.3mf  zTank_enclosure-Enclosure_bottom.stl
PCB/: .gitignore  2024-06-29 Comput.ods  README.md  fp-info-cache  fp-lib-table  sym-lib-table  tank_PCB.kicad_pcb  tank_PCB.kicad_prl  tank_PCB.kicad_pro  tank_PCB.kicad_sch  tank_PCB.kicad_sch-bak  ~tank_PCB.kicad_sch.lck
PCB/BOM/: Projet_juil.07_0934.xls  tank_PCB.csv  tank_PCB.xlsx
PCB/Gerbers/: tank_PCB-B_Mask.gbs  tank_PCB-B_Silkscreen.gbo  tank_PCB-F_Mask.gts  tank_PCB-F_Paste.gtp  tank_PCB-F_Silkscreen.gto  tank_PCB-NPTH-drl_map.gbr  tank_PCB-NPTH.drl
PCB/Gerbers/v1.1/: tank_PCB-B_Cu.gbl  tank_PCB-B_Mask.gbs  tank_PCB-B_Paste.gbp  tank_PCB-B_Silkscreen.gbo  (+9 more)
PCB/screenshot/: Image editing.odg
drivers/: CMakeLists.txt  Kconfig.drivers  adsDriver.cpp  flowMeter.cpp  volumetricMeter.cpp  waterFlowMeasCluster.cpp  waterMeterCluster.cpp  waterPressureMeasCluster.cpp
drivers/include/: adsDriver.h  flowMeter.h  tempCluster.h  volumetricMeter.h  waterFlowMeasCluster.h  waterMeterCluster.h  waterPressureMeasCluster.h
external_converters/: zTank.js
main/: CMakeLists.txt  Kconfig.main  Kconfig.projbuild  debugToDEL Z2m.json  debugToDEL.json  main.cpp  main.h
(+27 files in other folders)
